# scratch

./: TestDashdo.hs  scratch.cabal  stack.yaml
