Name:                scratch
Version:             0.1.0
Synopsis:            random stuff
Description:
        lots of random stuff


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
category:            Statistics, Web
Cabal-Version: 	     >= 1.10


executable test-plotly
  main-is: TestPlotly.hs
  default-language:  Haskell2010
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , datasets
                     , lucid
                     , aeson
                     , text
                     , microlens


executable test-dashdo
  main-is: TestDashdo.hs
  default-language:  Haskell2010
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , datasets
                     , lucid
                     , aeson
                     , text
                     , microlens
                     , dashdo